--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,40 +1,54 @@
 @import "settings";
-@import "foundation";
 
-// Or selectively include components
-// @import
-//   "foundation/components/accordion",
-//   "foundation/components/alert-boxes",
-//   "foundation/components/block-grid",
-//   "foundation/components/breadcrumbs",
-//   "foundation/components/button-groups",
-//   "foundation/components/buttons",
-//   "foundation/components/clearing",
-//   "foundation/components/dropdown",
-//   "foundation/components/dropdown-buttons",
-//   "foundation/components/flex-video",
-//   "foundation/components/forms",
-//   "foundation/components/grid",
-//   "foundation/components/inline-lists",
+// Basic structure & functionality
+ @import
+//   "foundation/components/reveal", // modals
+   "foundation/components/alert-boxes",
+   "foundation/components/block-grid",
+   "foundation/components/grid",
+   "foundation/components/inline-lists",
+   "foundation/components/keystrokes", // special highlighting for keyboard shortcuts
+   "foundation/components/labels",
+   "foundation/components/panels", // content wells
+   "foundation/components/tables",
+   "foundation/components/tooltips",
+   "foundation/components/type", // typography
+   "foundation/components/visibility"; // classes to display elements based on screen size
+
+// Navigation
+@import
 //   "foundation/components/joyride",
-//   "foundation/components/keystrokes",
-//   "foundation/components/labels",
 //   "foundation/components/magellan",
-//   "foundation/components/orbit",
-//   "foundation/components/pagination",
-//   "foundation/components/panels",
-//   "foundation/components/pricing-tables",
-//   "foundation/components/progress-bars",
-//   "foundation/components/reveal",
 //   "foundation/components/side-nav",
-//   "foundation/components/split-buttons",
 //   "foundation/components/sub-nav",
-//   "foundation/components/switches",
-//   "foundation/components/tables",
-//   "foundation/components/tabs",
-//   "foundation/components/thumbs",
-//   "foundation/components/tooltips",
-//   "foundation/components/top-bar",
-//   "foundation/components/type",
-//   "foundation/components/offcanvas",
-//   "foundation/components/visibility";
+//   "foundation/components/pagination",
+//   "foundation/components/offcanvas", // slide-in menu
+   "foundation/components/top-bar", // navbar, requires foundation.topbar.js
+   "foundation/components/tabs",
+   "foundation/components/accordion",
+   "foundation/components/breadcrumbs";
+
+
+// Inputs
+@import
+//   "foundation/components/range-slider", // min-max slider controls
+//   "foundation/components/switches", // sliding form controls
+   "foundation/components/buttons",
+//   "foundation/components/split-buttons", // buttons with dropdowns
+   "foundation/components/button-groups",
+   "foundation/components/progress-bars",
+   "foundation/components/dropdown",
+   "foundation/components/dropdown-buttons",
+   "foundation/components/forms";
+
+
+// Media
+@import
+//   "foundation/components/flex-video", // responsive video
+//   "foundation/components/clearing", // responsive lightboxes, requires foundation.clearing.js
+//   "foundation/components/orbit", // image slider
+   "foundation/components/thumbs"; // image anchor tags
+
+
+// Misc
+//   "foundation/components/pricing-tables", // price listings
