--- a/scss/styleguide.scss
+++ b/scss/styleguide.scss
@@ -8,3 +8,4 @@
     &.large-view { width: 1024px; }
     &.auto-view { width: auto; }
 }
+.side-nav { background: $smoke; padding: $column-gutter; }
