--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -83,22 +83,21 @@ $include-html-global-classes: $include-html-classes;
 // $include-html-grid-classes: $include-html-classes;
 // $include-xl-html-grid-classes: false;
 
-// $row-width: rem-calc(1000);
+$row-width: rem-calc(1200);
 // $total-columns: 12;
-// $column-gutter: rem-calc(30);
+$column-gutter: rem-calc(30);
 
 // c. Global
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 // We use these to define default font stacks
- $font-family-sans-serif: "Apres RE", "Helvetica Neue", Helvetica, Arial, sans-serif;
- $font-family-serif: 'Turnip RE', Georgia, 'Times New Roman', Times, serif;
- $font-family-display-serif: "Salvo Serif Cond", Georgia, "Times New Roman", Times, serif;
- $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
-
+$font-family-sans-serif: "Apres RE", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-serif: 'Turnip RE', Georgia, 'Times New Roman', Times, serif;
+$font-family-display-serif: "Salvo Serif Cond", Georgia, "Times New Roman", Times, serif;
+$font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
 
 // We use these to define default font weights
-// $font-weight-normal: normal;
+$font-weight-normal: normal;
 // $font-weight-bold: bold;
 
 // $white       : #FFFFFF;
@@ -107,7 +106,7 @@ $include-html-global-classes: $include-html-classes;
 // $vapor       : #F6F6F6;
 // $white-smoke : #F5F5F5;
 // $silver      : #EFEFEF;
-// $smoke       : #EEEEEE;
+ $smoke       : #EEEEEE;
 // $gainsboro   : #DDDDDD;
 // $iron        : #CCCCCC;
 // $base        : #AAAAAA;
@@ -219,6 +218,7 @@ $medium-blue: #0f9bd1;
 // $header-bottom-margin: .5rem;
 // $header-text-rendering: optimizeLegibility;
 
+
 // We use these to control header font sizes
 // $h1-font-size: rem-calc(44);
 // $h2-font-size: rem-calc(37);
@@ -326,6 +326,8 @@ $medium-blue: #0f9bd1;
 // We use this to control abbr font styles
 // $microformat-abbr-font-weight: $font-weight-bold;
 // $microformat-abbr-font-decoration: none;
+
+
 
 // 01. Accordion
 // - - - - - - - - - - - - - - - - - - - - - - - - -
