--- a/scss/blueline.scss
+++ b/scss/blueline.scss
@@ -50,10 +50,11 @@
     margin: ($column-gutter/2);
 }
 
+
 // Blueline overrides of components/_type.scss
 
-h1 { font-style: italic; }
-h1, h2, h3 { font-family: $primary-header-font-family; }
-h4, h5, h6 { font-family: $secondary-header-font-family; font-weight: bold;}
-h2, h3, h4, h5, h6 { font-style: normal; }
+h1 { font-style: italic; margin: rem-calc(11) 0; }
+h1, h2, h3 { font-family: $primary-header-font-family; line-height: rem-calc(44); }
+h4, h5, h6 { font-family: $secondary-header-font-family; font-weight: bold; line-height: rem-calc(22); }
+h2, h3, h4, h5, h6 { font-style: normal; margin: rem-calc(11) 0; }
 h6 { text-transform: uppercase; }
