--- a/scss/blueline.scss
+++ b/scss/blueline.scss
@@ -39,7 +39,7 @@
    "foundation/components/thumbs"; // image anchor tags
 
 
-// BLUE LINE COMING THROUGH
+// WELCOME ABOARD BLUE LINE RUN 3.0.0
 //  __   __   __    ___ ___  |  ,----\
 // |__| |__| |__|  | O | O | |  ||____\
 //                 |___|___| |         )
@@ -50,7 +50,87 @@
     margin: ($column-gutter/2);
 }
 
+a { transition: color 0.3s ease-in-out; }
 
+ul {
+    list-style-type: square;
+    &.contact-icons {
+        list-style-type: none;
+        margin-left: 0;
+        margin-bottom: 0;
+        display: table;
+        content: "";
+        clear: both;
+        li {
+            display: inline-block;
+            float: left;
+            padding-top: 7px;
+            min-height: 33px;
+            padding: 8px 12px 0 0px;
+            margin: 0 -1px;
+            &:first-child { padding-left: 12px; }
+            a,
+            a:link,
+            a:visited { color: $charcoal; }
+            a:hover,
+            a:active { color: $light-blue; }
+            i { width: rem-calc(20); text-align: center; }
+        }
+    }
+}
+
+hr {
+    margin: 22px 0;
+    border: none;
+    border-top: 4px double $smoke;
+}
+
+blockquote {
+    padding: 1em 1em 0;
+    margin: 0 0 22px;
+    overflow: auto;
+    font-family: "Turnip RE",Georgia,"Times New Roman",Times,serif;
+    font-style: italic;
+    background-color: $ghost;
+    p {
+        font-size: rem-calc(17.5);
+        line-height: rem-calc(26.5);
+        color: $charcoal;
+        &.source { text-align: right; }
+    }
+}
+
+.editors-note {
+  background-color: $white-smoke;
+  border-top: 4px solid $orange;
+  color: $charcoal;
+  font-family: $font-family-sans-serif;
+  line-height: 1.5em;
+  padding: 18px 24px;
+  margin: 1.4em 0 1.6em;
+  &:before {
+      padding-right: 3px;
+      color: $orange;
+      content: "Editor's Note: ";
+  }
+}
+
+@media screen and (min-width: 728px) {
+    *[data-pullquote]:before {
+        border-bottom: medium double $gainsboro;
+        border-top: medium double $gainsboro;
+        color: $orange;
+        content: attr(data-pullquote);
+        float: right;
+        font-family: $font-family-display-serif;
+        font-size: rem-calc(25);
+        font-style: italic;
+        line-height: 1.3;
+        margin: 7px 0 .5em 35px;
+        padding: 22px 1px 20px;
+        width: 34%;
+    }
+}
 // Blueline overrides of components/_type.scss
 
 h1 { font-style: italic; margin: rem-calc(11) 0; }
