only include settings necessary for partials

--- a/scss/flex-video.scss
+++ b/scss/flex-video.scss
@@ -1,4 +1,35 @@
+// $include-html-classes: false should work as of Foundation 4, but it doesn't. Each module must be set. Ugh.
+$include-html-grid-classes: false;
+$include-html-type-classes: false;
+$include-html-accordion-classes: false;
+$include-html-alert-classes: false;
+$include-html-block-grid-classes: false;
+$include-html-button-classes: false;
+$include-html-clearing-classes: false;
+$include-html-form-classes: false;
+$include-html-inline-list-classes: false;
+$include-html-keystroke-classes: false;
+$include-html-label-classes: false;
+$include-html-magellan-classes: false;
+$include-html-orbit-classes: false;
+$include-pagination-classes: false;
+$include-html-panel-classes: false;
+$include-html-pricing-classes: false;
+$include-html-range-slider-classes: false;
+$include-html-reveal-classes: false;
+$include-html-table-classes: false;
+$include-html-tabs-classes: false;
+$include-html-tooltip-classes: false;
+$include-html-top-bar-classes: false;
+$include-html-visibility-classes: false;
+$include-html-nav-classes: false;
+$include-html-dropdown-classes: false;
+$include-html-joyride-classes: false;
+$include-html-off-canvas-classes: false;
+
+// Flex (responsive) video
+$include-html-media-classes: true;
+
 @import "settings";
 
-// responsive video
 @import "foundation/components/flex-video";
