--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -111,7 +111,7 @@ $smoke       : #EEEEEE;
 // $iron        : #CCCCCC;
 // $base        : #AAAAAA;
 // $aluminum    : #999999;
-// $jumbo       : #888888;
+ $jumbo       : #888888;
 // $monsoon     : #777777;
 // $steel       : #666666;
 $charcoal    : #555555;
@@ -129,12 +129,12 @@ $medium-blue: #0f9bd1;
 $dark-blue: #147693;
 
 // We use these as default colors throughout
-// $primary-color: #008CBA;
-// $secondary-color: #e7e7e7;
-// $alert-color: #f04124;
-// $success-color: #43AC6A;
-// $warning-color: #f08a24;
-// $info-color: #a0d3e8;
+ $primary-color: $medium-blue;
+ $secondary-color: $gainsboro;
+ $alert-color: $orange;
+ $success-color: #5bb75b;
+ $warning-color: $light-green;
+ $info-color: $medium-blue;
 
 // We use these to control various global styles
 // $body-bg: $white;
@@ -462,24 +462,24 @@ $dark-blue: #147693;
 // $button-font-align: center;
 
 // We use these to control various hover effects.
-// $button-function-factor: -20%;
+ $button-function-factor: -15%;
 
 // We use these to control button border styles.
 // $button-border-width: 0;
 // $button-border-style: solid;
-// $button-bg-color: $primary-color;
+ $button-bg-color: $gainsboro;
 // $button-bg-hover: scale-color($button-bg-color, $lightness: $button-function-factor);
-// $button-border-color: $button-bg-hover;
-// $secondary-button-bg-hover: scale-color($secondary-color, $lightness: $button-function-factor);
-// $secondary-button-border-color: $secondary-button-bg-hover;
-// $success-button-bg-hover: scale-color($success-color, $lightness: $button-function-factor);
-// $success-button-border-color: $success-button-bg-hover;
-// $alert-button-bg-hover: scale-color($alert-color, $lightness: $button-function-factor);
-// $alert-button-border-color: $alert-button-bg-hover;
-// $warning-button-bg-hover: scale-color($warning-color, $lightness: $button-function-factor);
-// $warning-button-border-color: $warning-button-bg-hover;
-// $info-button-bg-hover: scale-color($info-color, $lightness: $button-function-factor);
-// $info-button-border-color: $info-button-bg-hover;
+ $button-border-color: scale-color($button-bg-color, $lightness: -40%);
+ $secondary-button-bg-hover: scale-color($secondary-color, $lightness: $button-function-factor);
+ $secondary-button-border-color: scale-color($secondary-button-bg-hover, $lightness: -40%);
+ $success-button-bg-hover: scale-color($success-color, $lightness: $button-function-factor);
+ $success-button-border-color: scale-color($success-button-bg-hover, $lightness: -40%);
+ $alert-button-bg-hover: scale-color($alert-color, $lightness: $button-function-factor);
+ $alert-button-border-color: scale-color($alert-button-bg-hover, $lightness: -40%);
+ $warning-button-bg-hover: scale-color($warning-color, $lightness: $button-function-factor);
+ $warning-button-border-color: scale-color($warning-button-bg-hover, $lightness: -40%);
+ $info-button-bg-hover: scale-color($info-color, $lightness: $button-function-factor);
+ $info-button-border-color: scale-color($info-button-bg-hover, $lightness: -40%);
 
 // We use this to set the default radius used throughout the core.
 // $button-radius: $global-radius;
