--- a/scss/blueline.scss
+++ b/scss/blueline.scss
@@ -1,3 +1,56 @@
+// WELCOME ABOARD BLUE LINE RUN 3.0.0
+//  __   __   __    ___ ___  |  ,----\
+// |__| |__| |__|  | O | O | |  ||____\
+//                 |___|___| |         )
+//___________________________|________/
+
+// Overrides + additions for foundation/_settings.scss
+/*$white-smoke : #F3F3F3;
+$gainsboro   : #DDDDDD;
+$lighter-orange: #f7ccb2;
+$light-orange: #e35a25;
+$orange: #ce4d28;
+$dark-orange: #c34528;
+$light-green: #eae34a;
+$light-blue: #1dacd6;
+$medium-blue: #0f9bd1;
+$dark-blue: #147693;
+
+// We use these as default colors throughout
+$primary-color: $medium-blue;
+$secondary-color: $gainsboro;
+$alert-color: $orange;
+$success-color: #5bb75b;
+$warning-color: $light-green;
+$info-color: $medium-blue;
+
+// Grid
+$row-width: rem-calc(1200);
+$column-gutter: rem-calc(30);
+
+// We use these to define default font stacks
+$font-family-sans-serif: "Apres RE", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-serif: 'Turnip RE', Georgia, 'Times New Roman', Times, serif;
+$font-family-display-serif: "Salvo Serif Cond", Georgia, "Times New Roman", Times, serif;
+$font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
+
+// We use these to control header font styles
+$primary-header-font-family: $font-family-display-serif;
+$secondary-header-font-family: $font-family-serif;
+$header-font-weight: normal;
+
+// We use these to control header font sizes
+$h1-font-size: rem-calc(44);
+$h2-font-size: rem-calc(30);
+$h3-font-size: rem-calc(27.2);
+$h4-font-size: rem-calc(20);
+$h5-font-size: 1rem;
+$h6-font-size: rem-calc(13.6);
+
+$body-font-family: $font-family-serif;
+
+
+@import "foundation/settings"; */
 @import "settings";
 
 // Basic structure/styling
@@ -38,13 +91,7 @@
 @import
    "foundation/components/thumbs"; // image anchor tags
 
-
-// WELCOME ABOARD BLUE LINE RUN 3.0.0
-//  __   __   __    ___ ___  |  ,----\
-// |__| |__| |__|  | O | O | |  ||____\
-//                 |___|___| |         )
-//___________________________|________/
-
+// Knight Lab colors
 .lightest-orange-bg { background: $lighter-orange; }
 .lightest-orange-text { color: $lighter-orange; }
 .light-orange-bg { background: $light-orange; }
@@ -62,11 +109,8 @@
 .dark-blue-bg { background: $dark-blue; }
 .dark-blue-text { color: $dark-blue; }
 
-.row.full-width {
-    @include grid-row($behavior: nest);
-    margin: ($column-gutter/2);
-}
-
+// Knight Lab typography
+h1.post-title { font-style: normal; line-height: 1.1;}
 a { transition: color 0.3s ease-in-out; }
 
 ul {
@@ -96,12 +140,6 @@ ul {
     }
 }
 
-hr {
-    margin: 22px 0;
-    border: none;
-    border-top: 4px double $smoke;
-}
-
 blockquote {
     padding: 1em 1em 0;
     margin: 0 0 22px;
@@ -115,6 +153,42 @@ blockquote {
         color: $charcoal;
         &.source { text-align: right; }
     }
+}
+
+.drop-hed,
+.panel .drop-hed {
+    color: $dark-orange;
+    font-family: $font-family-sans-serif;
+    font-size: rem-calc(18);
+    text-transform: uppercase;
+    a {
+        &:link,
+        &:visited {
+            color: $dark-orange;
+        }
+        &:hover,
+        &:active { color: $light-orange;  }
+
+    }
+}
+
+.byline,
+.panel .byline {
+    font-family: $font-family-sans-serif;
+    text-transform: uppercase;
+    color: $jumbo;
+}
+// Knight Lab utilities
+
+.row.full-width {
+    @include grid-row($behavior: nest);
+    margin: ($column-gutter/2);
+}
+
+hr {
+    margin: 22px 0;
+    border: none;
+    border-top: 4px double $smoke;
 }
 
 .editors-note {
@@ -132,6 +206,40 @@ blockquote {
   }
 }
 
+button,
+.button {
+    @include button($radius: true);
+    text-transform: uppercase;
+    font-size: rem-calc(14);
+    text-shadow: 0 1px 0px rgba(255, 255, 255, 0.75);
+    box-shadow: 0pt -1px 0pt rgba(0, 0, 0, 0.075) inset, 0pt 1px 0pt rgba(255, 255, 255, 0.3) inset, 0pt 1px 2px rgba(0, 0, 0, 0.1);
+
+    &:hover,
+    &:active,
+    &:focus {
+        box-shadow: 0pt -10px 10pt rgba(0, 0, 0, 0.075) inset;
+        span {
+            color: #fff;
+            text-shadow: 0px -1px 0px rgba(0,0,0,0.4);
+        }
+    }
+
+    &.success,
+    &.alert,
+    &.info { text-shadow: 0 1px 1px rgba(0, 0, 0, 0.75); }
+
+    &.warning span { color: $oil; }
+    &.warning:hover span { text-shadow: 0px -1px 0px rgba(255,255,255,0.6); }
+
+    &.disabled,
+    &.disabled:hover {
+        text-shadow: none;
+        box-shadow: none;
+        span { color: $oil; text-shadow: none;}
+    }
+}
+
+
 @media screen and (min-width: 728px) {
     *[data-pullquote]:before {
         border-bottom: medium double $gainsboro;
@@ -148,11 +256,15 @@ blockquote {
         width: 34%;
     }
 }
-// Blueline overrides of components/_type.scss
 
+// Blueline overrides of components/_type.scss
 h1 { font-style: italic; margin: rem-calc(11) 0; }
 h2.intro { color: $orange; font-family: $font-family-sans-serif; }
 h1, h2, h3 { font-family: $primary-header-font-family; line-height: rem-calc(44); }
 h4, h5, h6 { font-family: $secondary-header-font-family; font-weight: bold; line-height: rem-calc(22); }
 h2, h3, h4, h5, h6 { font-style: normal; margin: rem-calc(11) 0; }
 h6 { text-transform: uppercase; }
+
+// Blueline overrides of components/_buttons.scss
+// is this actually a rule in there?
+ /*box-shadow: -1px -1px 0 $button-border-color inset;*/
