--- a/scss/blueline.scss
+++ b/scss/blueline.scss
@@ -213,7 +213,8 @@ button,
     font-size: rem-calc(14);
     text-shadow: 0 1px 0px rgba(255, 255, 255, 0.75);
     box-shadow: 0pt -1px 0pt rgba(0, 0, 0, 0.075) inset, 0pt 1px 0pt rgba(255, 255, 255, 0.3) inset, 0pt 1px 2px rgba(0, 0, 0, 0.1);
-
+    border: 3px solid transparent;
+    &:focus { outline: none; }
     &:hover,
     &:active,
     &:focus {
@@ -239,6 +240,8 @@ button,
     }
 }
 
+.f-dropdown:before,
+.f-dropdown:after { display: none; }
 
 @media screen and (min-width: 728px) {
     *[data-pullquote]:before {
