--- a/scss/blueline.scss
+++ b/scss/blueline.scss
@@ -85,7 +85,9 @@ $body-font-family: $font-family-serif;
    "foundation/components/button-groups",
    "foundation/components/progress-bars",
    "foundation/components/dropdown",
-   "foundation/components/forms";
+   "foundation/components/forms",
+   "foundation/components/split-buttons", // buttons with dropdowns only on part of the button
+   "foundation/components/dropdown-buttons"; // buttons with dropdowns
 
 // Media
 @import
@@ -228,8 +230,6 @@ hr {
 .f-dropdown:before,
 .f-dropdown:after { display: none; }
 
-
-
 // Blueline overrides of components/_type.scss
 h1 { font-style: italic; margin: rem-calc(11) 0; }
 h2.intro { color: $orange; font-family: $font-family-sans-serif; }
@@ -242,16 +242,14 @@ h6 { text-transform: uppercase; }
 button,
 .button {
     @include button($radius: true);
-    text-transform: uppercase;
-    font-size: rem-calc(14);
-    text-shadow: 0 1px 0px rgba(255, 255, 255, 0.75);
-    box-shadow: 0pt -1px 0pt rgba(0, 0, 0, 0.075) inset, 0pt 1px 0pt rgba(255, 255, 255, 0.3) inset, 0pt 1px 2px rgba(0, 0, 0, 0.1);
-    border: 3px solid transparent;
+    border-width: 1px;
+    border-style: solid;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
     &:focus { outline: none; }
     &:hover,
     &:active,
     &:focus {
-        box-shadow: 0pt -10px 10pt rgba(0, 0, 0, 0.075) inset;
+        box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2) inset, 0pt -10px 10pt rgba(0, 0, 0, 0.075) inset;
         span {
             color: #fff;
             text-shadow: 0px -1px 0px rgba(0,0,0,0.4);
@@ -262,18 +260,24 @@ button,
     &.alert,
     &.info { text-shadow: 0 1px 1px rgba(0, 0, 0, 0.75); }
 
+    &.inverse {
+        @include button($radius: true, $bg: $white, $bg-hover: $medium-blue, $border-color: $base);
+        border-width: 1px;
+    }
+
     &.warning span { color: $oil; }
-    &.warning:hover span { text-shadow: 0px -1px 0px rgba(255,255,255,0.6); }
+    &.warning:hover span { text-shadow: -1px -1px 0px rgba(255,255,255,0.6); }
 
     &.disabled,
     &.disabled:hover {
         text-shadow: none;
         box-shadow: none;
+        border-color: transparent;
         span { color: $oil; text-shadow: none;}
     }
 }
-// Blueline overrides of components/_forms.scss
 
+// Blueline overrides of components/_forms.scss
 input[type="text"],
 input[type="password"],
 input[type="date"],
