--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1418,7 +1418,7 @@ $dark-blue: #147693;
 // $topbar-link-weight: $font-weight-normal;
 // $topbar-link-font-size: rem-calc(13);
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
- $topbar-link-bg: transparent;
+ $topbar-link-bg: $topbar-bg;
  $topbar-link-bg-hover: $gainsboro;
 // $topbar-link-bg-color-hover: $charcoal;
 // $topbar-link-bg-active: $primary-color;
