--- a/scss/blueline.scss
+++ b/scss/blueline.scss
@@ -277,6 +277,21 @@ hr {
 
 // Knight Lab footer
 /* Footer */
+@media (max-width: 767px) {
+    footer { padding: 10px 30px; }
+    #knightlab-logo-column,
+    #knightlab-description {
+        width: 100%;
+        float: none;
+        text-align: center;
+    }
+    #knightlab-description {
+        border-left: 0;
+        text-align: left;
+    }
+    address { display: none; }
+}
+
 footer,
 #footer{
   padding: 10px 80px 0;
